--- a/single-spa-demo/package.json
+++ b/single-spa-demo/package.json
@@ -8,7 +8,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged && concurrently yarn:test yarn:lint"
+      "pre-commit": "pretty-quick --staged && concurrently yarn:lint"
     }
   },
   "devDependencies": {
