--- a/single-spa-demo/apps/svelte-app/package.json
+++ b/single-spa-demo/apps/svelte-app/package.json
@@ -13,10 +13,10 @@
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.0.0"
+    "sirv-cli": "^0.4.4"
   },
   "dependencies": {
-    "single-spa-svelte": "^2.0.0",
-    "sirv-cli": "^0.4.4"
+    "svelte": "^3.0.0",
+    "single-spa-svelte": "^2.0.0"
   }
 }
