fixe some runtime errors
Signed-off-by: thomas <iam@tangkunyin.com>

--- a/qiankun-demo/vue-main/package.json
+++ b/qiankun-demo/vue-main/package.json
@@ -47,7 +47,10 @@
     "parserOptions": {
       "ecmaVersion": 2020
     },
-    "rules": {}
+    "rules": {
+      "@typescript-eslint/ban-ts-ignore": "off",
+      "@typescript-eslint/no-explicit-any": "off"
+    }
   },
   "browserslist": [
     "> 1%",
