--- a/standard-projects/svelte-demo/package.json
+++ b/standard-projects/svelte-demo/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public"
+    "start": "sirv public --cors --port 9003"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "11.0.2",
