--- a/qiankun-demo/vue-main/package.json
+++ b/qiankun-demo/vue-main/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "start:all": "npm-run-all --parallel start:*",
+    "start:main": "vue-cli-service serve",
+    "start:react": "cd ../../standard-projects/react-demo/ && yarn start",
+    "start:vue": "cd ../../standard-projects/vue-demo/ && yarn start",
+    "start:svelte": "cd ../../standard-projects/svelte-demo/ && yarn start",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -28,6 +32,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
