update qiankun demo
Signed-off-by: thomas <iam@tangkunyin.com>

--- a/standard-projects/react-demo/package.json
+++ b/standard-projects/react-demo/package.json
@@ -10,8 +10,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-config": "^5.1.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "rescripts start",
@@ -35,6 +34,7 @@
     ]
   },
   "devDependencies": {
-    "@rescripts/cli": "^0.0.14"
+    "@rescripts/cli": "^0.0.14",
+    "react-scripts": "^3.4.1"
   }
 }
